--- a/html/template.html
+++ b/html/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
   <link rel="stylesheet" type="text/css" href="template.css">
   <title>Document</title>
 </head>
+
 <body>
-    <header>ヘッダー</header>
-    <nav>ナビ</nav>
-    <div id="ads">広告</div>
-    <article>記事</article>
-    <footer>フッター</footer>
+  <h1>志望状況</h1>
+  <div class="grid">
+    {{grid}}
+  </div>
 </body>
+
 </html>
