--- a/html/lab_data_temp.html
+++ b/html/lab_data_temp.html
@@ -2,18 +2,17 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="./template.css">
+  <link rel="stylesheet" type="text/css" href="./lab_data.css">
   <title>Document</title>
 </head>
 
 <body>
-  <h1>志望状況</h1>
-  <div class="grid">
-    {{grid}}
-  </div>
+  <h1>研究室空き状況</h1>
+  <div class="btn"><a href="./student_data.html">志望状況を確認</a></div>
+  {{container}}
 </body>
 
 </html>
