cssとhtmlの構造をちょっと改善

--- a/html/lab_data_temp.html
+++ b/html/lab_data_temp.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-  <h1>研究室空き状況</h1>
-  <div class="btn"><a href="./student_data.html">志望状況を確認</a></div>
-  {{container}}
+  <div id="background">
+    <h1>研究室空き状況</h1>
+    <div class="btn"><a href="./student_data.html">志望状況を確認</a></div>
+    {{container}}
+  </div>
 </body>
 
 </html>
