--- a/html/student_data_temp.html
+++ b/html/student_data_temp.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-  <h1>志望状況</h1>
-  <div class="btn"><a href="./lab_data.html">研究室の空き状況を確認</a></div>
-  <div class="grid">
-    {{grid}}
+  <div id="background">
+    <h1>志望状況</h1>
+    <div class="btn"><a href="./lab_data.html">研究室の空き状況を確認</a></div>
+    <div class="grid">
+      {{grid}}
+    </div>
   </div>
 </body>
 
