--- a/html/lab_data.html
+++ b/html/lab_data.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="./lab_data.css">
-  <title>Document</title>
+  <title>研究室配属状況</title>
 </head>
 
 <body>
