相談会が終了

--- a/html/student_data.html
+++ b/html/student_data.html
@@ -14,7 +14,359 @@
     <h1>志望状況</h1>
     <div class="btn"><a href="./lab_data.html">研究室の空き状況を確認</a></div>
     <div class="grid">
-<div class="item"><div class="name">1 : 浅井響</div><div class="state">未配属</div></div><div class="item"><div class="name">2 : 東一織</div><div class="state">未配属</div></div><div class="item"><div class="name">3 : 渥美渉</div><div class="state">未配属</div></div><div class="item"><div class="name">4 : 新井陵友</div><div class="state">未配属</div></div><div class="item"><div class="name">5 : 有田実季</div><div class="state">未配属</div></div><div class="item"><div class="name">6 : 飯田虎之介</div><div class="state">未配属</div></div><div class="item"><div class="name">7 : 池田哲生</div><div class="state">未配属</div></div><div class="item"><div class="name">8 : 池村美咲</div><div class="state">未配属</div></div><div class="item"><div class="name">9 : 石井雅也</div><div class="state">未配属</div></div><div class="item"><div class="name">10 : 石原杏</div><div class="state">未配属</div></div><div class="item"><div class="name">11 : 今村愛</div><div class="state">未配属</div></div><div class="item"><div class="name">12 : 居森裕也</div><div class="state">未配属</div></div><div class="item"><div class="name">13 : 植木裕子</div><div class="state">未配属</div></div><div class="item"><div class="name">14 : 請川達也</div><div class="state">未配属</div></div><div class="item"><div class="name">15 : 内田啓人</div><div class="state">未配属</div></div><div class="item"><div class="name">16 : 榎いずみ</div><div class="state">未配属</div></div><div class="item"><div class="name">17 : 遠藤建</div><div class="state">未配属</div></div><div class="item"><div class="name">18 : 及川和輝</div><div class="state">未配属</div></div><div class="item"><div class="name">19 : 大西浩文</div><div class="state">未配属</div></div><div class="item"><div class="name">20 : 大沼太郎</div><div class="state">未配属</div></div><div class="item"><div class="name">21 : 大場美智子</div><div class="state">未配属</div></div><div class="item"><div class="name">22 : 岡部七子</div><div class="state">未配属</div></div><div class="item"><div class="name">23 : 岡山桃果</div><div class="state">未配属</div></div><div class="item"><div class="name">24 : 笠井翔太</div><div class="state">未配属</div></div><div class="item"><div class="name">25 : 梶原陽太郎</div><div class="state">未配属</div></div><div class="item"><div class="name">26 : 片山友里</div><div class="state">未配属</div></div><div class="item"><div class="name">27 : 金元俊輔</div><div class="state">未配属</div></div><div class="item"><div class="name">28 : 神谷奈央子</div><div class="state">未配属</div></div><div class="item"><div class="name">29 : 川畑恵一</div><div class="state">未配属</div></div><div class="item"><div class="name">30 : 川邉明広</div><div class="state">未配属</div></div><div class="item"><div class="name">31 : 北澤慎一</div><div class="state">未配属</div></div><div class="item"><div class="name">33 : 小林薫平</div><div class="state">未配属</div></div><div class="item"><div class="name">34 : 小林瑞樹</div><div class="state">未配属</div></div><div class="item"><div class="name">35 : 駒沢歩弥</div><div class="state">未配属</div></div><div class="item"><div class="name">36 : 佐伯英</div><div class="state">未配属</div></div><div class="item"><div class="name">37 : 佐藤佑</div><div class="state">未配属</div></div><div class="item"><div class="name">38 : 重松航</div><div class="state">未配属</div></div><div class="item"><div class="name">39 : 島田紗也華</div><div class="state">未配属</div></div><div class="item"><div class="name">40 : 志茂将太朗</div><div class="state">未配属</div></div><div class="item"><div class="name">41 : 蒋晨星</div><div class="state">未配属</div></div><div class="item"><div class="name">42 : 白井孝平</div><div class="state">未配属</div></div><div class="item"><div class="name">43 : 鈴木健一</div><div class="state">未配属</div></div><div class="item"><div class="name">44 : 須藤成俊</div><div class="state">未配属</div></div><div class="item"><div class="name">45 : セガール詩文</div><div class="state">未配属</div></div><div class="item"><div class="name">46 : 妹尾賢治</div><div class="state">未配属</div></div><div class="item"><div class="name">47 : 千菊智也</div><div class="state">未配属</div></div><div class="item"><div class="name">48 : 高岡恭兵</div><div class="state">未配属</div></div><div class="item"><div class="name">49 : 瀧口龍之介</div><div class="state">未配属</div></div><div class="item"><div class="name">50 : タクショウネイ</div><div class="state">未配属</div></div><div class="item"><div class="name">51 : 田口淳一</div><div class="state">未配属</div></div><div class="item"><div class="name">52 : 工風清</div><div class="state">未配属</div></div><div class="item"><div class="name">53 : 蓼沼豊</div><div class="state">未配属</div></div><div class="item"><div class="name">54 : 田中志和</div><div class="state">未配属</div></div><div class="item"><div class="name">55 : 田村隆太郎</div><div class="state">未配属</div></div><div class="item"><div class="name">56 : 丁婧文</div><div class="state">未配属</div></div><div class="item"><div class="name">57 : 富澤郁美</div><div class="state">未配属</div></div><div class="item"><div class="name">58 : 中田遥友</div><div class="state">未配属</div></div><div class="item"><div class="name">59 : 中村優斗</div><div class="state">未配属</div></div><div class="item"><div class="name">60 : 西浦佑香</div><div class="state">未配属</div></div><div class="item"><div class="name">61 : 野本歩夢</div><div class="state">未配属</div></div><div class="item"><div class="name">62 : 幅崎美涼</div><div class="state">未配属</div></div><div class="item"><div class="name">63 : 早川怜志</div><div class="state">未配属</div></div><div class="item"><div class="name">64 : 原田花音</div><div class="state">未配属</div></div><div class="item"><div class="name">65 : 原田知季</div><div class="state">未配属</div></div><div class="item"><div class="name">66 : 日高瞳</div><div class="state">未配属</div></div><div class="item"><div class="name">67 : 平山皓太</div><div class="state">未配属</div></div><div class="item"><div class="name">68 : 広田将恭</div><div class="state">未配属</div></div><div class="item"><div class="name">69 : 深作明日香</div><div class="state">未配属</div></div><div class="item"><div class="name">70 : 藤原穫</div><div class="state">未配属</div></div><div class="item"><div class="name">71 : 増田裕樹</div><div class="state">未配属</div></div><div class="item"><div class="name">72 : 松本周子</div><div class="state">未配属</div></div><div class="item"><div class="name">73 : 馬渕陽</div><div class="state">未配属</div></div><div class="item"><div class="name">74 : 三上弘記</div><div class="state">未配属</div></div><div class="item"><div class="name">75 : 宗俊吾</div><div class="state">未配属</div></div><div class="item"><div class="name">76 : 村上拓</div><div class="state">未配属</div></div><div class="item"><div class="name">77 : 村本雅哉</div><div class="state">未配属</div></div><div class="item"><div class="name">79 : 柳沼舜</div><div class="state">未配属</div></div><div class="item"><div class="name">80 : 山崎隼</div><div class="state">未配属</div></div><div class="item"><div class="name">81 : 山本啓喜</div><div class="state">未配属</div></div><div class="item"><div class="name">82 : 湯淺隼</div><div class="state">未配属</div></div><div class="item"><div class="name">83 : 吉田圭吾</div><div class="state">未配属</div></div><div class="item"><div class="name">84 : 李彩維</div><div class="state">未配属</div></div><div class="item"><div class="name">85 : 劉哲男</div><div class="state">未配属</div></div><div class="item"><div class="name">86 : 鹿一璞</div><div class="state">未配属</div></div><div class="item"><div class="name">87 : 渡部誠也</div><div class="state">未配属</div></div><div class="item"><div class="name">88 : 萩原郁哉</div><div class="state">未配属</div></div><div class="item"><div class="name">89 : 徳良真</div><div class="state">未配属</div></div><div class="item"><div class="name">90 : 樋川直人</div><div class="state">未配属</div></div>    </div>
+      <div class="item">
+        <div class="name">1 : 浅井響</div>
+        <div class="state">天然物合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">2 : 東一織</div>
+        <div class="state">分子薬物動態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">3 : 渥美渉</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">4 : 新井陵友</div>
+        <div class="state">細胞情報学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">5 : 有田実季</div>
+        <div class="state">基礎有機化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">6 : 飯田虎之介</div>
+        <div class="state">基礎有機化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">7 : 池田哲生</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">8 : 池村美咲</div>
+        <div class="state">細胞情報学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">9 : 石井雅也</div>
+        <div class="state">細胞情報学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">10 : 石原杏</div>
+        <div class="state">分子生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">11 : 今村愛</div>
+        <div class="state">分子薬物動態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">12 : 居森裕也</div>
+        <div class="state">育薬学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">13 : 植木裕子</div>
+        <div class="state">蛋白質代謝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">14 : 請川達也</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">15 : 内田啓人</div>
+        <div class="state">生理化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">16 : 榎いずみ</div>
+        <div class="state">遺伝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">17 : 遠藤建</div>
+        <div class="state">分子薬物動態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">18 : 及川和輝</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">19 : 大西浩文</div>
+        <div class="state">衛生化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">20 : 大沼太郎</div>
+        <div class="state">遺伝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">21 : 大場美智子</div>
+        <div class="state">蛋白質代謝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">22 : 岡部七子</div>
+        <div class="state">遺伝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">23 : 岡山桃果</div>
+        <div class="state">基礎有機化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">24 : 笠井翔太</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">25 : 梶原陽太郎</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">26 : 片山友里</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">27 : 金元俊輔</div>
+        <div class="state">基礎有機化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">28 : 神谷奈央子</div>
+        <div class="state">生体分析化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">29 : 川畑恵一</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">30 : 川邉明広</div>
+        <div class="state">蛋白質代謝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">31 : 北澤慎一</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">33 : 小林薫平</div>
+        <div class="state">蛋白質代謝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">34 : 小林瑞樹</div>
+        <div class="state">医学部附属病院薬剤部(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">35 : 駒沢歩弥</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">36 : 佐伯英</div>
+        <div class="state">医学部附属病院薬剤部(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">37 : 佐藤佑</div>
+        <div class="state">生体分析化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">38 : 重松航</div>
+        <div class="state">天然物合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">39 : 島田紗也華</div>
+        <div class="state">生体分析化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">40 : 志茂将太朗</div>
+        <div class="state">天然物化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">41 : 蒋晨星</div>
+        <div class="state">分子生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">42 : 白井孝平</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">43 : 鈴木健一</div>
+        <div class="state">生体分析化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">44 : 須藤成俊</div>
+        <div class="state">薬品作用学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">45 : セガール詩文</div>
+        <div class="state">医学部附属病院薬剤部(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">46 : 妹尾賢治</div>
+        <div class="state">薬品作用学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">47 : 千菊智也</div>
+        <div class="state">免疫・微生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">48 : 高岡恭兵</div>
+        <div class="state">天然物合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">49 : 瀧口龍之介</div>
+        <div class="state">薬品作用学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">50 : タクショウネイ</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">51 : 田口淳一</div>
+        <div class="state">天然物合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">52 : 工風清</div>
+        <div class="state">生理化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">53 : 蓼沼豊</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">54 : 田中志和</div>
+        <div class="state">細胞情報学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">55 : 田村隆太郎</div>
+        <div class="state">分子薬物動態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">56 : 丁婧文</div>
+        <div class="state">分子生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">57 : 富澤郁美</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">58 : 中田遥友</div>
+        <div class="state">天然物合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">59 : 中村優斗</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">60 : 西浦佑香</div>
+        <div class="state">医学部附属病院薬剤部(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">61 : 野本歩夢</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">62 : 幅崎美涼</div>
+        <div class="state">有機合成化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">63 : 早川怜志</div>
+        <div class="state">細胞情報学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">64 : 原田花音</div>
+        <div class="state">志望しない</div>
+      </div>
+      <div class="item">
+        <div class="name">65 : 原田知季</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">66 : 日高瞳</div>
+        <div class="state">生理化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">67 : 平山皓太</div>
+        <div class="state">機能病態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">68 : 広田将恭</div>
+        <div class="state">生理化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">69 : 深作明日香</div>
+        <div class="state">生理化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">70 : 藤原穫</div>
+        <div class="state">分子薬物動態学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">71 : 増田裕樹</div>
+        <div class="state">分子生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">72 : 松本周子</div>
+        <div class="state">基礎有機化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">73 : 馬渕陽</div>
+        <div class="state">生理化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">74 : 三上弘記</div>
+        <div class="state">薬品作用学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">75 : 宗俊吾</div>
+        <div class="state">蛋白質代謝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">76 : 村上拓</div>
+        <div class="state">生体分析化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">77 : 村本雅哉</div>
+        <div class="state">遺伝学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">79 : 柳沼舜</div>
+        <div class="state">衛生化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">80 : 山崎隼</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">81 : 山本啓喜</div>
+        <div class="state">生体分析化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">82 : 湯淺隼</div>
+        <div class="state">免疫・微生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">83 : 吉田圭吾</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">84 : 李彩維</div>
+        <div class="state">分子生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">85 : 劉哲男</div>
+        <div class="state">免疫・微生物学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">86 : 鹿一璞</div>
+        <div class="state">基礎有機化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">87 : 渡部誠也</div>
+        <div class="state">薬品作用学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">88 : 萩原郁哉</div>
+        <div class="state">育薬学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">89 : 徳良真</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+      <div class="item">
+        <div class="name">90 : 樋川直人</div>
+        <div class="state">薬品代謝化学(志望)</div>
+      </div>
+    </div>
   </div>
 </body>
 
